--- a/labs/lab02-code-analyzer-agent/python/requirements.txt
+++ b/labs/lab02-code-analyzer-agent/python/requirements.txt
@@ -3,5 +3,6 @@ uvicorn==0.27.0
 pydantic==2.5.3
 anthropic==0.18.0
 openai==1.12.0
-google-generativeai==0.3.0
+google-generativeai>=0.5.0
 python-dotenv==1.0.0
+protobuf>=5.0,<7.0
