--- a/labs/lab04-rag-system/python/requirements.txt
+++ b/labs/lab04-rag-system/python/requirements.txt
@@ -5,5 +5,7 @@ anthropic==0.18.0
 openai==1.12.0
 google-generativeai==0.3.0
 python-dotenv==1.0.0
-chromadb==0.4.22
+chromadb==0.4.24
 sentence-transformers==2.3.0
+numpy<2
+httpx<0.28
